--- a/app/src/main/res/layout/item_showing_movies.xml
+++ b/app/src/main/res/layout/item_showing_movies.xml
@@ -4,15 +4,16 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
+        android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp">
 
         <ImageView
             android:id="@+id/iv_header_sm"
-            android:layout_width="50dp"
-            android:layout_height="75dp"
-            android:layout_marginRight="20dp" />
+            android:layout_width="60dp"
+            android:layout_height="90dp"
+            android:layout_marginRight="15dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,9 +28,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="电影名称：战狼2"
+                android:gravity="start"
+                android:text="战狼2"
                 android:textColor="#000"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_movie_actors_sm"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="bottom"
+                android:lines="1"
+                android:text="主演：吴京"
+                android:textColor="#6d6d6d"
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/tv_movie_date_sm"
@@ -39,7 +53,7 @@
                 android:gravity="bottom"
                 android:text="上映时间：2017"
                 android:textColor="#6d6d6d"
-                android:textSize="14sp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/tv_movie_star_sm"
@@ -49,7 +63,14 @@
                 android:gravity="bottom"
                 android:text="豆瓣评分：7.5"
                 android:textColor="#f3cf5e"
-                android:textSize="14sp" />
+                android:textSize="13sp" />
         </LinearLayout>
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@+id/layout1"
+        android:layout_marginLeft="15dp"
+        android:background="#dddddd" />
 </RelativeLayout>
