--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.holmeslei.movienews.ui.activity.MainActivity"
-    tools:openDrawer="start">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_Main"
+    tools:context="com.holmeslei.movienews.ui.activity.MainActivity">
+    <!--主布局-->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <include layout="@layout/toolbar_base" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_Main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+    <!--侧滑菜单-->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_main"
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/drawer_item_bg_n"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:itemBackground="@drawable/select_nav_item_bg"
+        app:menu="@menu/menu_nav" />
+</android.support.v4.widget.DrawerLayout>
