--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,18 @@
     android:fitsSystemWindows="true"
     tools:context="com.holmeslei.movienews.ui.activity.MainActivity">
     <!--主布局-->
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <include layout="@layout/toolbar_base" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_Main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </android.support.design.widget.CoordinatorLayout>
     <!--侧滑菜单-->
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_main"
