--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,11 @@
 
         <include layout="@layout/toolbar_base" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_Main"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#ffffff"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </android.support.design.widget.CoordinatorLayout>
     <!--侧滑菜单-->
