--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         app:tabIndicatorColor="@color/white"
         app:tabIndicatorHeight="2dp"
-        app:tabMode="scrollable"
+        app:tabMode="fixed"
         app:tabSelectedTextColor="@color/white"
         app:tabTextColor="@color/grayd" />
 </android.support.design.widget.AppBarLayout>
