--- a/app/src/main/res/layout/fragment_general_movie.xml
+++ b/app/src/main/res/layout/fragment_general_movie.xml
@@ -4,8 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_general_movie"
+    <com.holmeslei.movienews.ui.widget.swipe.SwipeRefreshLayout
+        android:id="@+id/srl_general_movie"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_general_movie"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.holmeslei.movienews.ui.widget.swipe.SwipeRefreshLayout>
+
 </LinearLayout>
